--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "curl -sL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.41.2-stable.tar.xz | tar xJ && flutter/bin/flutter build web --release",
+  "buildCommand": "echo 'pre-built'",
   "outputDirectory": "build/web",
   "installCommand": "echo 'skip'",
   "framework": null
