--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "buildCommand": "echo 'pre-built'",
-  "outputDirectory": "build/web",
-  "installCommand": "echo 'skip'",
-  "framework": null
+  "buildCommand": "",
+  "outputDirectory": ".",
+  "installCommand": "",
+  "framework": null,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
